clusters/k3s-cluster/invoice-ninja/invoice.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: invoice-ninja
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoice-ninja-ingress
  namespace: invoice-ninja
  labels:
    name: invoice-ninja-ingress
spec:
  rules:
    - host: invoice-ninja.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: invoiceninja-web
                port:
                  number: 8080
